# bvplayer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  审查报告.md
src/: App.vue  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  controller.rs  daemon.rs  download.rs  error.rs  main.rs  models.rs  player.rs
src/assets/: global.css
src/components/Common/: ExitModal.vue  FadeTransition.vue  TrackItem.vue  VolumeSlider.vue
src/components/Layout/: BottomPlayer.vue  PlaylistMain.vue  TopSearchBar.vue
src/composables/: useDevice.ts  usePlayer.ts  usePlaylist.ts  useTauriIpc.ts  useToast.ts
src/types/: index.ts
src/utils/: time.ts
